<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPS Signal</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_about">About</string>
    <string name="time">Wating for gps&#8230;</string>
    <string name="latitude"><b>Latitude:</b> ---</string>
    <string name="longitude"><b>Longitude:</b> ---</string>
    <string name="altitude"><b>Altitude:</b> ---</string>
    <string name="accuracy"><b>Accuracy:</b> ---</string>
    <string name="speed"><b>Speed:</b> ---</string>
    <string name="satallites"><b>Satellites:</b> ---</string>
    <string name="address"><b>Address:</b> ---</string>
    <string name="copytoclipboard">Copy to clipboard</string>
    <string name="speedometer">Seedometer</string>
    <string name="speedometer_val">---</string>
    <string name="km">km/hr</string>

    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Admob banner id -->
    <string name="banner_ad_unit_id">ca-app-pub-3752588937390537/7589925208</string>

</resources>