<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pdm.gpssignal.MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/listbroder"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/timeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/latitudeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/latitude"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/longitudeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/longitude"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/altitudeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/altitude"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/accuracyTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/accuracy"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/satellitesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/satallites"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/speedTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/speed"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/addressTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:maxLines="2"
            android:text="@string/address"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/copyBtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_action_copy"
            android:drawableStart="@drawable/ic_action_copy"
            android:paddingBottom="5dp"
            android:paddingEnd="8dp"
            android:paddingLeft="1dp"
            android:paddingRight="8dp"
            android:paddingStart="1dp"
            android:text="@string/copytoclipboard" />

        <Button
            android:id="@+id/speedometerBtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/speedometer"
            android:drawableStart="@drawable/speedometer"
            android:paddingBottom="5dp"
            android:paddingEnd="8dp"
            android:paddingLeft="5dp"
            android:paddingRight="8dp"
            android:paddingStart="5dp"
            android:text="@string/speedometer" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" >
    </com.google.android.gms.ads.AdView>

</RelativeLayout>